<resources>
    <string name="app_name">Runner\'s Swiss Army Knife</string>

    <string-array name="sample_array">
        <item>test1</item>
        <item>test2</item>
        <item>test3</item>
        <item>test4</item>
        <item>test5</item>
        <item>test6</item>
        <item>test7</item>
        <item>test8</item>
        <item>test9</item>
        <item>test10</item>
    </string-array>

    <string name="language_english" translatable="false">English</string>
    <string name="language_adiga" translatable="false">Adıǵe</string>
    <string name="language_arabic" translatable="false">العربية</string>
    <string name="language_hebrew" translatable="false">עברית</string>
    <string name="language_turkish" translatable="false">Türkçe</string>

    <string name="button_select">Select</string>

    <string name="speed">Speed</string>
    <string name="distance">Distance</string>
    <string name="time">time</string>
    <string name="distance_km">distance\nkm</string>
    <string name="distance_mile">distance\nmile</string>
    <string name="pace">Pace</string>
    <string name="per_km">per km</string>
    <string name="per_mile">per mile</string>
    <string name="km_per_hour">km per hour</string>
    <string name="miles_per_hour">miles per hour</string>
    <string name="minutes_per_km">minutes\nper\nkm</string>
    <string name="km_per_hour_newlines">km\nper\nhour</string>
    <string name="minutes_per_mile">minutes\nper\nmile</string>
    <string name="mile_per_hour_newlines">mile\nper\nhour</string>

    <string name="one_k">1 K</string>
    <string name="three_k">3 K</string>
    <string name="five_k">5 K</string>
    <string name="ten_k">10 K</string>
    <string name="twentyone_k">21 K</string>
    <string name="fortytwo_k">42 K</string>
</resources>
