<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textDirection="ltr"
    tools:context=".SelectLanguageActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSelectLanguageEnglish"
        android:layout_width="0dp"
        android:layout_height="@dimen/bt_height_lang"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/background_option"
        android:gravity="center"
        android:onClick="buttonLanguageClicked"
        android:outlineProvider="background"
        android:shadowColor="#60000000"
        android:shadowDx="-5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/language_english"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="34dp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/buttonSelectLanguageTurkish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSelectLanguageTurkish"
        android:layout_width="0dp"
        android:layout_height="@dimen/bt_height_lang"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/background_option"
        android:gravity="center"
        android:onClick="buttonLanguageClicked"
        android:outlineProvider="background"
        android:shadowColor="#60000000"
        android:shadowDx="-5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/language_turkish"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="34dp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/buttonSelectLanguageArabic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectLanguageEnglish" />

    <!--    // a á b c ç ć d e é f g ǵ ğ h ḣ ı i j k ḱ l ĺ m n o ö p ṕ q r s ş ś š t ṫ u ü w x y z ź-->
    <!--    // A Á B C Ç Ć D E É F G Ǵ Ğ H Ḣ I İ J K Ḱ L Ĺ M N O Ö P Ṕ Q R S Ş Ś Š T Ṫ U Ü W X Y Z Ź-->
    <!--    // áçćéǵğḣıḱĺöṕşśšṫüź-->
    <!--    // ÁÇĆÉǴĞḢİḰĹÖṔŞŚŠṪÜŹ-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSelectLanguageArabic"
        android:layout_width="0dp"
        android:layout_height="@dimen/bt_height_lang"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/background_option"
        android:gravity="center"
        android:onClick="buttonLanguageClicked"
        android:outlineProvider="background"
        android:shadowColor="#60000000"
        android:shadowDx="-5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/language_arabic"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="34dp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/buttonSelectLanguageAdiga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectLanguageTurkish" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSelectLanguageAdiga"
        android:layout_width="0dp"
        android:layout_height="@dimen/bt_height_lang"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/background_option"
        android:gravity="center"
        android:onClick="buttonLanguageClicked"
        android:outlineProvider="background"
        android:shadowColor="#60000000"
        android:shadowDx="-5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/language_adiga"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="34dp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/buttonSelectLanguageArabic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectLanguageHebrew" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSelectLanguageHebrew"
        android:layout_width="0dp"
        android:layout_height="@dimen/bt_height_lang"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/background_option"
        android:gravity="center"
        android:onClick="buttonLanguageClicked"
        android:outlineProvider="background"
        android:shadowColor="#60000000"
        android:shadowDx="-5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/language_hebrew"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="34dp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/buttonSelectLanguageSelect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectLanguageAdiga" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSelectLanguageSelect"
        android:layout_width="0dp"
        android:layout_height="@dimen/bt_height_select"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/background_select"
        android:enabled="false"
        android:gravity="center"
        android:onClick="buttonSelectClicked"
        android:outlineProvider="background"
        android:shadowColor="#60000000"
        android:shadowDx="-5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/button_select"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineSelectLanguageBottom" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSelectLanguageBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>
